--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <header>
         <h1>A Library</h1>
     </header>
-    <main></main>
+    <main>
+        <section>
+            <button>New Book</button>
+        </section>
+        <section></section>
+    </main>
 </body>
 </html>
