initialized pop-up and overlay

--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
         </section>
         <section></section>
     </main>
+    <div class="pop-up">
+
+    </div>
+    <div class="overlay"></div>
 </body>
 </html>
