--- a/index.html
+++ b/index.html
@@ -14,12 +14,37 @@
     </header>
     <main>
         <section>
-            <button>New Book</button>
+            <button class="addBook">New Book</button>
         </section>
         <section></section>
     </main>
     <div class="pop-up">
-
+        <form>
+            <h2>Add a book</h2>
+            <hr>
+            <div>
+                <label for="author">Author</label><br>
+                <input type="text" id="author">
+            </div>
+            <div>
+                <label for="title">Title</label><br>
+                <input type="text" id="title">
+            </div>
+            <div>
+                <label for="genre">Genre</label><br>
+                <input type="text" id="genre">
+            </div>
+            <div>
+                <label for="pageNum">Num. of pages</label><br>
+                <input type="text" id="pageNum">
+            </div>
+            <div>
+                <label for="read">Read ?</label><br>
+                <input type="radio" name="read" id="read">Yes
+                <input type="radio" name="read" id="read">No
+            </div>
+            <button type="button">Submit</button>
+        </form>
     </div>
     <div class="overlay"></div>
 </body>
