--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
                 <label for="pageNum">Num. of pages</label><br>
                 <input type="text" id="pageNum">
             </div>
-            <div>
-                <label for="read">Read ?</label><br>
+            <div class="pop-up-radio-container">
+                <label for="read">Read ?</label>
                 <input type="radio" name="read" id="read">Yes
                 <input type="radio" name="read" id="read">No
             </div>
-            <button type="button">Submit</button>
+            <div class="pop-up-btn-container">
+                <button type="button" class="pop-up-btn">Submit</button>
+            </div>
         </form>
     </div>
     <div class="overlay"></div>
