made the popup work

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <section>
-            <button class="addBook">New Book</button>
+            <button class="add-book">New Book</button>
         </section>
         <section></section>
     </main>
