validation to adding things into library

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
             <hr>
             <div>
                 <label for="author">Author</label><br>
-                <input type="text" id="author">
+                <input type="text" id="author" required>
             </div>
             <div>
                 <label for="title">Title</label><br>
-                <input type="text" id="title">
+                <input type="text" id="title" required>
             </div>
             <div>
                 <label for="genre">Genre</label><br>
-                <input type="text" id="genre">
+                <input type="text" id="genre" required>
             </div>
             <div>
                 <label for="pageNum">Num. of pages</label><br>
-                <input type="number" id="pageNum">
+                <input type="number" id="pageNum" required>
             </div>
             <div class="pop-up-radio-container">
                 <label for="read">Read ?</label>
