--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="createdCardElements.css">
+    <link rel="stylesheet" href="media-queries.css">
     <script src="libraryscript.js" defer></script>
 </head>
 <body>
